[gd_scene load_steps=8 format=2]

[ext_resource path="res://box/caja.png" type="Texture" id=1]
[ext_resource path="res://box/state_handler.gd" type="Script" id=2]
[ext_resource path="res://box/states/not_levitating.gd" type="Script" id=3]
[ext_resource path="res://box/box_behavior.gd" type="Script" id=4]
[ext_resource path="res://box/states/levitating.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.746, 11.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.7422, 0.843822 )

[node name="Box" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 4 )

[node name="State_handler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="not_levitating" type="Node" parent="State_handler"]
script = ExtResource( 3 )

[node name="levitating" type="Node" parent="State_handler"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -11.74 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_Box_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Box_mouse_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
